'实现可伸缩的toolbar效果'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">AndroidXAllStudy</string>
+    <string name="day_every_month">每月%d日</string>
+<string name="content">Android是基于Linux系统的开源操作系统，是由Andy Rubin于2003年在美国加州创建，后被Google于2005年收购。在2008年的时候发布了第一部Android智能手机，随后Android不断发展更新，占据了全球大部分的手机市场。
+Android每一个版本都会用一个按照A-Z开头顺序的甜品来命名，但从Android P之后Google改变了这一传统的命名规则，可能是没有那么多让人熟知的甜品代号供使用以及甜品名字并不能让人直观的了解到哪一个甜品有什么特性，于是Google直接采用数字来命令系统，并且加深了logo的颜色，不再使用甜品作为代号。下面是截止到2020年7月份各版本市场占有率，最新数据可以在官网上查询，或者在Android Studio里面新建一个项目，当选择支持最低的SDK（Minimum SDK）版本的时候，就可以看到当前选择的SDK版本及以上的版本在市场上面的占有率。从图中可以看到Android每个系统版本都有一定的占有率，这就给手机应用开发者针对不同版本的适配带来很多麻烦；同时可以看出较新的系统版本占有率相当高，这就要求开发者尽早的针对新版本进行学习和适配，让我们的应用支持新的系统版本带给我们的新功能和特性。
+我们可通过以 Java 语言编写的 API 使用 Android OS 的整个功能集。这些 API 形成创建 Android 应用所需的构建块，它们可简化核心模块化系统组件和服务的重复使用，包括以下组件和服务：
+
+丰富、可扩展的视图系统，可用以构建应用的 UI，包括列表、网格、文本框、按钮甚至可嵌入的网络浏览器
+资源管理器，用于访问非代码资源，例如本地化的字符串、图形和布局文件
+通知管理器，可让所有应用在状态栏中显示自定义提醒
+Activity 管理器，用于管理应用的生命周期，提供常见的导航返回栈
+内容提供程序，可让应用访问其他应用（例如“联系人”应用）中的数据或者共享其自己的数据
+开发者可以完全访问 Android 系统应用使用的框架 API。 无论系统内置或者我们自己编写的App，都需要使用到这层，比如我们想弄来电黑名单，自动挂断电话，我们就需要用到电话管理(TelephonyManager) 通过该层我们就可以很轻松的实现挂断操作，而不需要关心底层实现。</string>
 </resources>
